<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_marginTop="50sp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_username"
            android:textSize="18sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20sp"
            />
        <EditText
            android:autofillHints="emailAddress"
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/custom_et"
            android:hint="@string/placeholder_username"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textSize="18sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20sp"
            />
        <EditText
            android:autofillHints="password"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/placeholder_password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/custom_et"
            android:layout_marginTop="5dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_btn"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            />


    </LinearLayout>

</ScrollView>